--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "mongoose": "^4.1.9",
-    "morgan": "^1.6.1"
+    "morgan": "^1.6.1",
+    "nodemon": "1.7.1"
   }
 }
